# pastors-protocol-sitting-arrangement

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json  vite.config.js
api/: index.py
backend/: app_trace.txt  pip_freeze.txt  requirements.txt  supabase_schema.sql  test_supabase.py  trace.txt
backend/app/: __init__.py  api.py  auth.py  db.py  main.py  schemas.py
backend/app/endpoints/: __init__.py  attendees.py  conferences.py  dignitaries.py  sessions.py  users.py
context/: AGENT_CONTEXT.md  PROJECT_BRIEF.md
src/: App.jsx  index.css
src/components/: AttendeeProfile.jsx  AuthProvider.jsx  Header.jsx  SeatGrid.jsx  UI.jsx  VenueMap.jsx
src/hooks/: useAttendees.js  useConferences.js  useSessions.js  useUser.js
src/lib/: constants.js  supabase.js
src/pages/: AuthPage.jsx  Conference.jsx  Dashboard.jsx  Session.jsx  UserManagement.jsx
src/services/: apiClient.js
