[project]
name = "pastors-protocol"
version = "1.0.0"
description = "Pastors' Protocol Central Sitting Arrangement"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "supabase==2.3.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "httpx<0.28.0",
]
