[project]
name = "pastors-protocol"
version = "1.0.0"
description = "Pastors' Protocol Central Sitting Arrangement"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
build-backend = "hatchling.build"
