[project]
name = "pastors-protocol-api"
version = "1.0.0"
description = "Backend API for Pastors' Protocol Central Sitting Arrangement"
requires-python = ">=3.9, <3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "supabase==2.9.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2"
]
